1.3.0 New built in help commands. Aliases now handle through Bukkit. LiteralCommand literal() is now deprecated. Use Command name() instead.